--- a/css/styles.css
+++ b/css/styles.css
@@ -566,6 +566,7 @@ footer .logo{
 .touch__inner{
   display: flex;
   justify-content: space-between;
+  padding-bottom: 20px;
 }
 .section__header{
   margin: 0;
@@ -589,4 +590,69 @@ footer .logo{
 }
 .section__content .socials{
   margin-top: 24px;
+}
+
+
+@media only screen  and (max-width: 1024px){
+  .touch__inner{
+    flex-direction: column;
+  }
+  .section__content{
+    margin-top: 24px;
+    width: 100%;
+  }
+}
+.touch:last-child{
+  margin-bottom: 100px;
+}
+.form__item{
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+.form__item:not(:first-child){
+  margin-top: 24px;
+}
+.form__item label{
+  font-weight: bold;
+  font-family: var(--main-font);
+  display: inline;
+  font-size: 13px;
+  line-height: 30px;
+  color: var(--main-color);
+  opacity: 0.8;
+}
+.form__item input,
+.form__item textarea{
+  width: 100%;
+  height: 48px;
+  padding: 9px 16px;
+  font-family: var(--main-font);
+  font-size: 13px;
+  line-height: 30px;
+  color: rgba(51, 50, 61, 0.4);
+  background-color: rgba(51, 50, 61, 0.1);
+  border: none;
+  margin-top: 8px;
+  resize: none;
+}
+.form__item textarea{
+  height: 100px;
+}
+.form button{
+  margin-top: 24px;
+}
+@media only screen and (max-width: 768px) {
+  .touch:last-child{
+    margin-bottom: 50px;
+  }  
+  .form__item:not(:first-child){
+    margin-top: 16px;
+  }
+  .touch__inner{
+    padding-top: 20px;
+  }
+  .header__inner{
+    padding: 34px 0;
+  }
 }
